// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalCountTable Component Render the ProposalCountTable Component having populated props with no errors 1`] = `
<ProposalCountTable
  proposals={
    Array [
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2018-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Clear",
      },
      Object {
        "instruments": Object {
          "bvit": Array [
            Object {
              "type": "BVIT",
            },
          ],
          "hrs": Array [
            Object {
              "exposureMode": "HIGH RESOLUTION",
            },
          ],
          "rss": Array [
            Object {
              "dictatorMode": "NORMAL",
              "mode": "Spectroscopy",
            },
          ],
          "scam": Array [
            Object {
              "dictatorMode": "NORMAL",
            },
          ],
        },
        "maxSeeing": 2,
        "timeRequests": Array [
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 150,
              },
              Object {
                "partnerCode": "UW",
                "time": 200,
              },
              Object {
                "partnerCode": "IUCAA",
                "time": 250,
              },
            ],
            "semester": "2017-1",
          },
          Object {
            "distribution": Array [
              Object {
                "partnerCode": "RSA",
                "time": 400,
              },
              Object {
                "partnerCode": "UW",
                "time": 50,
              },
            ],
            "semester": "2018-1",
          },
        ],
        "transparency": "Thin cloud",
      },
    ]
  }
>
  <div
    className="stat-item"
  >
    <h2>
      Submitted Proposals
    </h2>
    <table
      className="stat-table"
      style={
        Object {
          "height": "90%",
        }
      }
    >
      <thead>
        <tr>
          <th />
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Number of Proposals
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            New proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Older Proposals 
          </td>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td>
            Number of long term proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Number of new long term proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Thesis projects 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            P4 proposals 
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ProposalCountTable>
`;

exports[`ProposalCountTable Component Render the ProposalCountTable Component having unpopulated props with no errors 1`] = `
<ProposalCountTable
  proposals={Array []}
>
  <div
    className="stat-item"
  >
    <h2>
      Submitted Proposals
    </h2>
    <table
      className="stat-table"
      style={
        Object {
          "height": "90%",
        }
      }
    >
      <thead>
        <tr>
          <th />
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Number of Proposals
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            New proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Older Proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Number of long term proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Number of new long term proposals 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            Thesis projects 
          </td>
          <td>
            0
          </td>
        </tr>
        <tr>
          <td>
            P4 proposals 
          </td>
          <td>
            0
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ProposalCountTable>
`;
